--- a/todo-service-flyway/src/main/resources/application.properties
+++ b/todo-service-flyway/src/main/resources/application.properties
@@ -32,10 +32,10 @@ mp.openapi.extensions.smallrye.info.license.url=https://www.apache.org/licenses/
 #quarkus.datasource.devservices.enabled=false
 #quarkus.datasource.devservices.image-name=postgres:latest
 
-quarkus.datasource.users.db-kind=h2
-quarkus.datasource.users.username=username1
-quarkus.datasource.users.jdbc.url=jdbc:h2:tcp://localhost/mem:users
-quarkus.datasource.users.jdbc.max-size=11
+quarkus.datasource.db-kind=h2
+quarkus.datasource.username=username1
+quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:users
+quarkus.datasource.jdbc.max-size=11
 
 #quarkus.hibernate-orm.database.generation=drop-and-create
 
