Fixed memory config of H2

--- a/todo-service-flyway/src/main/resources/application.properties
+++ b/todo-service-flyway/src/main/resources/application.properties
@@ -34,10 +34,10 @@ mp.openapi.extensions.smallrye.info.license.url=https://www.apache.org/licenses/
 
 quarkus.datasource.db-kind=h2
 quarkus.datasource.username=username1
-quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:users
+quarkus.datasource.jdbc.url=jdbc:h2:mem:default
 quarkus.datasource.jdbc.max-size=11
 
-#quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=drop-and-create
 
 # Flyway
 quarkus.flyway.migrate-at-start=false
