Updated default username

--- a/todo-service-flyway/src/main/resources/application.properties
+++ b/todo-service-flyway/src/main/resources/application.properties
@@ -33,7 +33,7 @@ mp.openapi.extensions.smallrye.info.license.url=https://www.apache.org/licenses/
 #quarkus.datasource.devservices.image-name=postgres:latest
 
 quarkus.datasource.db-kind=h2
-quarkus.datasource.username=username1
+quarkus.datasource.username=sa
 quarkus.datasource.jdbc.url=jdbc:h2:mem:default
 quarkus.datasource.jdbc.max-size=11
 
