Removed max size

--- a/todo-service-flyway/src/main/resources/application.properties
+++ b/todo-service-flyway/src/main/resources/application.properties
@@ -34,8 +34,7 @@ mp.openapi.extensions.smallrye.info.license.url=https://www.apache.org/licenses/
 
 quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
-quarkus.datasource.jdbc.url=jdbc:h2:mem:default
-quarkus.datasource.jdbc.max-size=11
+quarkus.datasource.jdbc.url=jdbc:h2:~/test;AUTO_SERVER=TRUE
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 
